Murphy System/outputs/workspace_output_1769414673_9471.txt
  File "/workspace/murphy_backend_complete.py", line 2749
    else:
    ^^^^
SyntaxError: invalid syntax
